# OPI

./: CMakeLists.txt  erase_back_test.cpp  insert_front_test.cpp
.github/workflows/: cmake-multi-platform.yml
Test/: CMakeLists.txt  size_test.cpp  test_erase_back.cpp  test_erase_front.cpp  test_insert_back.cpp  test_insert_front.cpp  tests.cpp
